; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_ctl.c_ctl_nametomib.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_ctl.c_ctl_nametomib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ctl_initialized = common dso_local global i32 0, align 4
@EAGAIN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ctl_nametomib(i32* %0, i8* %1, i64* %2, i64* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64* %2, i64** %7, align 8
  store i64* %3, i64** %8, align 8
  %10 = load i32, i32* @ctl_initialized, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %18, label %12

12:                                               ; preds = %4
  %13 = load i32*, i32** %5, align 8
  %14 = call i64 @ctl_init(i32* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %12
  %17 = load i32, i32* @EAGAIN, align 4
  store i32 %17, i32* %9, align 4
  br label %25

18:                                               ; preds = %12, %4
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @tsd_tsdn(i32* %19)
  %21 = load i8*, i8** %6, align 8
  %22 = load i64*, i64** %7, align 8
  %23 = load i64*, i64** %8, align 8
  %24 = call i32 @ctl_lookup(i32 %20, i8* %21, i32* null, i64* %22, i64* %23)
  store i32 %24, i32* %9, align 4
  br label %25

25:                                               ; preds = %18, %16
  %26 = load i32, i32* %9, align 4
  ret i32 %26
}

declare dso_local i64 @ctl_init(i32*) #1

declare dso_local i32 @ctl_lookup(i32, i8*, i32*, i64*, i64*) #1

declare dso_local i32 @tsd_tsdn(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
